# ruby-marc

./: .gitignore  Cargo.toml  Rakefile  marc.gemspec
ext/: marc.rb
ext/marc/: Cargo.toml  extconf.rb
ext/marc/src/: lib.rs  subfield.rs
lib/: marc.rb
lib/marc/: datafield.rb  record.rb  subfield.rb  xml_parsers.rb
test/: tc_datafield.rb  tc_marchash.rb  tc_reader_char_encodings.rb  tc_record.rb  tc_subfield.rb  tc_unsafe_xml.rb  tc_writer.rb  tc_xml.rb
